--- a/src/app/templates/langgraph_chat_test.html
+++ b/src/app/templates/langgraph_chat_test.html
@@ -244,7 +244,10 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ message })
+                    body: JSON.stringify({ 
+                        message: message,
+                        language: 'en' // Always include language parameter
+                    })
                 });
                 
                 if (!response.ok) {
